--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -17,9 +17,9 @@ GlobalDefaultGameMode=/Game/FirstPerson/Blueprints/BP_FirstPersonGameMode.BP_Fir
 GlobalDefaultServerGameMode=None
 
 [/Script/Engine.RendererSettings]
-r.ReflectionMethod=1
+r.ReflectionMethod=0
 r.GenerateMeshDistanceFields=True
-r.DynamicGlobalIlluminationMethod=1
+r.DynamicGlobalIlluminationMethod=0
 r.Mobile.EnableNoPrecomputedLightingCSMShader=1
 r.DefaultFeature.AutoExposure.ExtendDefaultLuminanceRange=True
 r.DefaultFeature.AutoExposure.ExtendDefaultLuminanceRange=true
@@ -29,6 +29,19 @@ r.Shadow.Virtual.Enable=1
 r.DefaultFeature.LocalExposure.HighlightContrastScale=0.8
 
 r.DefaultFeature.LocalExposure.ShadowContrastScale=0.8
+r.Mobile.AntiAliasing=0
+r.DefaultFeature.AmbientOcclusion=False
+r.DefaultFeature.AmbientOcclusionStaticFraction=False
+r.DefaultFeature.AutoExposure=False
+r.DefaultFeature.MotionBlur=False
+
+r.TemporalAA.Upsampling=False
+r.AntiAliasingMethod=0
+r.MSAACount=0
+r.ScreenPercentage=25
+r.Upscale.Quality=0
+r.DefaultFeature.Bloom=False
+r.DefaultBackBufferPixelFormat=0
 
 [/Script/WindowsTargetPlatform.WindowsTargetSettings]
 DefaultGraphicsRHI=DefaultGraphicsRHI_DX12
