--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -4,16 +4,16 @@
 +EditProfiles=(Name="Trigger",CustomResponses=((Channel=Projectile, Response=ECR_Ignore)))
 
 [/Script/EngineSettings.GameMapsSettings]
-EditorStartupMap=/Game/UnrealJam/Worlds/ProtoScene.ProtoScene
+EditorStartupMap=/Game/UnrealJam/Worlds/PlayScene.PlayScene
 LocalMapOptions=
 TransitionMap=
 bUseSplitscreen=True
 TwoPlayerSplitscreenLayout=Horizontal
 ThreePlayerSplitscreenLayout=FavorTop
 GameInstanceClass=/Script/Engine.GameInstance
-GameDefaultMap=/Game/UnrealJam/Worlds/ProtoScene.ProtoScene
+GameDefaultMap=/Game/UnrealJam/Worlds/MenuScene.MenuScene
 ServerDefaultMap=/Engine/Maps/Entry
-GlobalDefaultGameMode=/Game/FirstPerson/Blueprints/BP_FirstPersonGameMode.BP_FirstPersonGameMode_C
+GlobalDefaultGameMode=/Game/UnrealJam/UMG/Menus/GM_Menu.GM_Menu_C
 GlobalDefaultServerGameMode=None
 
 [/Script/Engine.RendererSettings]
