--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -38,10 +38,11 @@ r.DefaultFeature.MotionBlur=False
 r.TemporalAA.Upsampling=False
 r.AntiAliasingMethod=0
 r.MSAACount=0
-r.ScreenPercentage=25
-r.Upscale.Quality=0
+r.ScreenPercentage=100
+r.Upscale.Quality=1
 r.DefaultFeature.Bloom=False
 r.DefaultBackBufferPixelFormat=4
+r.CustomDepth=3
 
 [/Script/WindowsTargetPlatform.WindowsTargetSettings]
 DefaultGraphicsRHI=DefaultGraphicsRHI_DX12
